# PathLearn_Nav

./: .gitignore  CMakeLists.txt  README.md
data/: DATA_CATALOG.md  DATA_INDEX.csv  eval_config_run_20260302_125223_runs.csv  eval_config_run_20260302_125223_summary.csv  eval_config_run_20260302_125223_weights.csv
data/BenchmarK/: README.md
data/BenchmarK/_meta/: README.md  experiment_index.csv
data/BenchmarK/legacy_rrt/challenge/: challenge_runs.csv  challenge_summary.csv
data/BenchmarK/legacy_rrt/pass/: pass_runs.csv  pass_summary.csv
data/BenchmarK/p1/challenge/: p1_challenge_20260222_164653_runs.csv  p1_challenge_20260222_164653_summary.csv  p1_challenge_20260222_164653_weights.csv
data/BenchmarK/p1/pass/: p1_pass_20260223_111502_runs.csv  p1_pass_20260223_111502_summary.csv  p1_pass_20260223_111502_weights.csv
data/BenchmarK/p1/tune/: p1_challenge_tune_20260225_103309_runs.csv  p1_challenge_tune_20260225_103309_summary.csv  p1_challenge_tune_20260225_103309_weights.csv
data/BenchmarK/p2_astar/baseline/: astar_base_s10_20260302_000155_runs.csv  astar_base_s10_20260302_000155_summary.csv  astar_base_s10_fix_20260302_114124_runs.csv  astar_base_s10_fix_20260302_114124_summary.csv
data/BenchmarK/p2_astar/heuristic/: astar_hint_v1_s10_fix_20260302_122746_runs.csv  astar_hint_v2_s10_20260302_183542_runs.csv  (+2 more)
data/config/: README.md  pathlearn_app.conf  pathlearn_app_p0.conf  pathlearn_eval.conf  pathlearn_eval_p0_challenge.conf  pathlearn_eval_p0_pass.conf  pathlearn_eval_p1_challenge.conf  pathlearn_eval_p1_challenge_tune.conf  pathlearn_eval_p1_pass.conf  pathlearn_eval_p2_astar_baseline.conf  pathlearn_eval_p2_astar_heuristic.conf  pathlearn_eval_p2_astar_learning.conf
data/maps/: README.md  scene_01.txt  scene_02.txt  scene_03.txt  scene_04.txt  scene_05.txt  scene_boundary.txt  scene_custom.tmj  scene_custom.txt  walls_32.tsx
data/models/: README.md  nn_sampler_default.txt  nn_sampler_v1.txt  nn_sampler_v2.txt  nn_sampler_v3.txt  nn_sampler_v4_20260305_071430.txt  nn_sampler_v5_20260305_071430.txt
data/nn_dataset/: README.md  nn_test_samples.csv  nn_train_samples.csv  nn_val_samples.csv
data/tiles/: README.md  tile.tsx
docs/: 2104240116doc.docx  2211410128相关材料-1.docx  config_usage.md  nn_minimal_plan.md  p0_protocol.md  p1_0_review.md  p1_protocol.md  沈阳建筑大学本科毕业设计规范化要求.docx
include/core/: collision.hpp  dynamic_obstacle.hpp  environment.hpp  learning.hpp  planner.hpp  simulation.hpp  types.hpp  visualization.hpp
include/impl/: cost_weight_learner.hpp  nn_sampler.hpp  rule_based_dynamic_obstacle.hpp  sdl_visualizer.hpp  simple_astar_planner.hpp  simple_collision_checker.hpp  simple_config.hpp  simple_environment.hpp  simple_evaluator.hpp  simple_rrt_planner.hpp  simple_simulation.hpp
script/: analyze_runs_success_only.py  run_p2_astar_24h_job.sh  run_p2_astar_budget_sweep.sh  run_p2_astar_challenge_compare.sh  run_p2_astar_fair_rerun.sh  run_p2_astar_overnight_24h.sh  run_p2_astar_pass_compare.sh
src/: main.cpp
src/collision/: simple_collision_checker.cpp
src/dynamic/: rule_based_dynamic_obstacle.cpp
src/environment/: simple_environment.cpp
src/evaluation/: eval_main.cpp  simple_evaluator.cpp
src/learning/: cost_weight_learner.cpp  nn_sampler.cpp
src/planner/: simple_astar_planner.cpp  simple_rrt_planner.cpp
src/simulation/: simple_simulation.cpp
src/visualization/: sdl_visualizer.cpp
tests/: CMakeLists.txt  core_types_test.cpp  dynamic_obstacle_test.cpp  environment_collision_test.cpp  evaluation_test.cpp  learning_test.cpp  nn_sampler_test.cpp  planner_test.cpp  simulation_test.cpp
tests/data/: empty_map.txt  nn_hint_model.txt  simple_map.txt
tools/: gen_nn_dataset.py  tiled_to_map.py  train_nn_sampler.py
(+43 files in other folders)
